2.feat(inventory): 実装在庫管理サービス功能
- 添加了库存实体类，包含商品ID、名称、数量等字段及验证逻辑
- 实现了库存控制器，提供RESTful API接口用于增删改查库存
- 创建了库存仓库接口，支持通过商品ID查询库存
- 开发了库存服务层，处理业务逻辑如检查库存、减少库存等
- 配置了H2内存数据库及相关属性，便于测试和开发
- 更新了Maven依赖，引入JPA、Validation等必要组件
- 删除了无用的示例代码文件（App.java及其测试类）
- 重命名并调整了主应用启动类以适应新的服务结构
- 添加了详细的README文档说明项目架构和技术特性
- 增加了快速启动脚本和API测试指南方便用户使用

--- a/inventory-service/inventory-impl/pom.xml
+++ b/inventory-service/inventory-impl/pom.xml
@@ -14,6 +14,10 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.khr.microservice</groupId>
+            <artifactId>inventory-api</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 </project>
