--- a/user-service/user-impl/pom.xml
+++ b/user-service/user-impl/pom.xml
@@ -16,7 +16,11 @@
         <java.version>25</java.version>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>org.khr.microservice</groupId>
+            <artifactId>user-api</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
