feat(gateway): 实现API网关并配置路由转发
- 添加Spring Cloud Gateway依赖并配置路由规则
- 配置Consul服务发现集成
- 设置全局过滤器用于传递Authorization头
- 启用Actuator监控端点
- 添加DEBUG日志级别以便调试网关行为

--- a/order-service/order-impl/pom.xml
+++ b/order-service/order-impl/pom.xml
@@ -19,5 +19,25 @@
             <artifactId>order-api</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.khr.microservice</groupId>
+            <artifactId>inventory-api</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.khr.microservice</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 </project>
