--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -21,7 +21,10 @@
         <module>user-impl</module>
     </modules>
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
