--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,11 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.khr.microservice</groupId>
-        <artifactId>inventory-service</artifactId>
+        <artifactId>springboot4-microservice</artifactId>
         <version>0.0.1</version>
     </parent>
 
-    <artifactId>inventory-api</artifactId>
+    <artifactId>common</artifactId>
+    <packaging>jar</packaging>
+
+    <name>common</name>
+    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,16 +21,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webflux</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.khr.microservice</groupId>
-            <artifactId>common</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
