--- a/inventory-service/inventory-impl/src/main/resources/application.yml
+++ b/inventory-service/inventory-impl/src/main/resources/application.yml
@@ -4,26 +4,23 @@ server:
 spring:
   application:
     name: inventory-service
-  
+  cloud:
+    consul:
+      port: 8500
   datasource:
-    url: jdbc:h2:mem:inventorydb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-  
+    url: jdbc:mysql://localhost:3306/microservice_db?useSSL=false&serverTimezone=Asia/Tokyo&allowPublicKeyRetrieval=true
+    username: root
+    password: admin123
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
 
 # Spring Boot 4 Actuatorエンドポイント
 management:
