--- a/order-service/order-impl/src/main/resources/application.yml
+++ b/order-service/order-impl/src/main/resources/application.yml
@@ -1,30 +1,26 @@
 server:
   port: 8082
-
 spring:
   application:
     name: order-service
-  
+  cloud:
+    consul:
+      port: 8500
   datasource:
-    url: jdbc:h2:mem:orderdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-  
+    url: jdbc:mysql://localhost:3306/microservice_db?useSSL=false&serverTimezone=Asia/Tokyo&allowPublicKeyRetrieval=true
+    username: root
+    password: admin123
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.H2Dialect
-
+        dialect: org.hibernate.dialect.MySQLDialect
+  
 # Spring Boot 4 Actuatorエンドポイント
 management:
   endpoints:
@@ -38,4 +34,8 @@ management:
 logging:
   level:
     com.example.order: DEBUG
-    org.springframework.web: INFO
+    org.springframework.web: DEBUG
+    org.springframework.web.client: DEBUG
+    org.springframework.http: DEBUG
+    org.springframework.boot.autoconfigure: DEBUG
+    org.springframework.cloud: DEBUG
