--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -20,5 +20,9 @@
         <module>order-api</module>
     </modules>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 </project>
