--- a/user-service/user-impl/pom.xml
+++ b/user-service/user-impl/pom.xml
@@ -21,6 +21,16 @@
             <artifactId>user-api</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
 </project>
