--- a/user-service/user-impl/src/main/resources/application.yml
+++ b/user-service/user-impl/src/main/resources/application.yml
@@ -4,7 +4,10 @@ server:
 spring:
   application:
     name: user-service
-  
+
+  cloud:
+    consul:
+      port: 8500
   datasource:
     url: jdbc:h2:mem:userdb
     driver-class-name: org.h2.Driver
