feat(gateway): 实现JWT认证与白名单路由过滤
- 新增基于Hutool的JWT解析与验证逻辑
- 添加白名单路由配置，支持免登录访问
- 实现X-UserId请求头传递用户信息
- 增加未授权访问时的JSON格式错误响应
- 更新网关路由配置，调整服务路径映射规则

fix(order): 移除订单模型中的用户ID非空校验

- 删除Order实体类中userId字段上的@NotNull注解
- 修改订单创建逻辑，从上下文中获取当前用户ID
- 引入UserContext工具类实现用户信息传递

refactor(user): 重构用户模块结构与安全拦截器

- 将User类迁移至model包下，优化包结构
- 新增UserModel定义注册与登录数据传输对象
- 重命名SecurityInterceptor为UserContextInterceptor
- 实现BCrypt密码加密与JWT令牌生成机制
- 添加用户注册与登录接口，完善认证流程

chore(deps): 引入Hutool JWT工具库依赖

- 在common模块中添加hutool-jwt依赖项
- 升级MySQL驱动版本并更新数据库配置
- 调整JPA方言设置以适配MySQL数据库
- 更新Hibernate DDL策略为update模式

test(gateway): 添加白名单配置属性测试用例

- 创建WhiteListTest单元测试类
- 验证application.yml中白名单路径注入功能
- 确保网关路由过滤器正确读取配置值

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -16,7 +16,14 @@ spring:
         - id: inventory-service
           uri: lb://inventory-service
           predicates:
-            - Path=/inventory-service/**
+            - Path=/inventorys/**
+          filters:
+            - StripPrefix=1
+
+        - id: user-service
+          uri: lb://user-service
+          predicates:
+            - Path=/users/**
           filters:
             - StripPrefix=1
 
@@ -26,6 +33,12 @@ spring:
       discovery:
         enabled: true
         service-name: api-gateway
+
+gateway:
+  white-list:
+    - /auth/login
+    - /auth/register
+
 management:
   endpoints:
     web:
