--- a/common/pom.xml
+++ b/common/pom.xml
@@ -22,5 +22,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-jwt</artifactId>
+            <version>5.8.40</version>
+        </dependency>
     </dependencies>
 </project>
