--- a/user-service/user-impl/pom.xml
+++ b/user-service/user-impl/pom.xml
@@ -31,6 +31,11 @@
             <version>8.0.33</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.khr.microservice</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
