refactor(gateway): 重构网关配置与依赖管理
- 调整 application.yml 中 gateway 路由结构，增加 server.webflux 配置层级
- 移除 gateway 白名单配置项
- 更新 pom.xml 依赖结构，替换 spring-cloud-starter-gateway 为 spring-cloud-starter-gateway-server-webflux
- 排除 hutool-jwt 中的 jackson 依赖冲突
- 引入 jackson-databind 显式依赖
- 修改 TokenGlobalFilter 使用 hutool 替代 jackson 进行 JWT 处理
- 增加下游请求头注入调试字段 "FUCK"
- 调整 common 模块 TokenConstant 常量定义格式
- 在 UserContextInterceptor 增加临时鉴权校验逻辑
- 新增 user-service WebConfig 配置类注册拦截器
- 修复模块间包路径引用问题，统一调整为 inventory 子包结构
- 更新父 pom 模块依赖及仓库快照配置

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -5,39 +5,35 @@ spring:
     name: api-gateway
   cloud:
     gateway:
-      routes:
-        - id: order-service
-          uri: lb://order-service
-          predicates:
-            - Path=/orders/**
-          filters:
-            - StripPrefix=1
+      server:
+        webflux:
+          routes:
+            - id: order-service
+              uri: lb://order-service
+              predicates:
+                - Path=/orders/**
+              filters:
+                - StripPrefix=1
 
-        - id: inventory-service
-          uri: lb://inventory-service
-          predicates:
-            - Path=/inventorys/**
-          filters:
-            - StripPrefix=1
+            - id: inventory-service
+              uri: lb://inventory-service
+              predicates:
+                - Path=/inventorys/**
+              filters:
+                - StripPrefix=1
 
-        - id: user-service
-          uri: lb://user-service
-          predicates:
-            - Path=/users/**
-          filters:
-            - StripPrefix=1
-
+            - id: user-service
+              uri: lb://user-service
+              predicates:
+                - Path=/users/**
+              filters:
+                - StripPrefix=1
     consul:
       host: localhost
       port: 8500
       discovery:
         enabled: true
         service-name: api-gateway
-
-gateway:
-  white-list:
-    - /auth/login
-    - /auth/register
 
 management:
   endpoints:
