feat(order): 引入Redis分布式锁并优化用户上下文管理
- 为订单服务添加Redis配置与分布式锁实现
- 使用RedisTemplate实现基于Lua脚本的安全解锁逻辑
- 替换ThreadLocal为ScopedValue以增强用户上下文安全性
- 新增UserContextFilter统一处理请求头中的用户标识
- 移除旧的拦截器逻辑及无用的HTTP头部信息
- 更新应用配置启用虚拟线程并调整日志级别
- 关闭JPA SQL显示以减少日志输出
- 添加Spring Data Redis依赖支持Redis功能集成

--- a/inventory-service/inventory-impl/src/main/resources/application.yml
+++ b/inventory-service/inventory-impl/src/main/resources/application.yml
@@ -12,11 +12,13 @@ spring:
     username: root
     password: admin123
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  threads:
+    virtual:
+      enabled: true
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
@@ -34,5 +36,9 @@ management:
 
 logging:
   level:
-    com.example.inventory: DEBUG
-    org.springframework.web: INFO
+    root: ERROR
+    org.springframework: ERROR
+    org.hibernate: ERROR
+    org.springframework.web: ERROR
+    org.springframework.cloud: ERROR
+
