--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: api-gateway
+  threads:
+    virtual:
+      enabled: true
   cloud:
     gateway:
       server:
@@ -45,4 +48,8 @@ management:
       show-details: always
 logging:
   level:
-    org.springframework.cloud.gateway: DEBUG
+    root: ERROR
+    org.springframework: ERROR
+    org.hibernate: ERROR
+    org.springframework.web: ERROR
+    org.springframework.cloud: ERROR
