--- a/order-service/order-impl/pom.xml
+++ b/order-service/order-impl/pom.xml
@@ -39,5 +39,10 @@
             <artifactId>common</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <!-- Spring Data Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 </project>
