--- a/order-service/order-impl/src/main/resources/application.yml
+++ b/order-service/order-impl/src/main/resources/application.yml
@@ -11,16 +11,23 @@ spring:
     username: root
     password: admin123
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  threads:
+    virtual:
+      enabled: true
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
-  
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      password: # 可选
+      database: 0
 # Spring Boot 4 Actuatorエンドポイント
 management:
   endpoints:
@@ -33,9 +40,8 @@ management:
 
 logging:
   level:
-    com.example.order: DEBUG
-    org.springframework.web: DEBUG
-    org.springframework.web.client: DEBUG
-    org.springframework.http: DEBUG
-    org.springframework.boot.autoconfigure: DEBUG
-    org.springframework.cloud: DEBUG
+    root: ERROR
+    org.springframework: ERROR
+    org.hibernate: ERROR
+    org.springframework.web: ERROR
+    org.springframework.cloud: ERROR
