feat(inventory): 实现库存预扣与确认机制
- 新增库存预扣、确认扣减和取消预扣方法
- 引入 OrderEventDTO 和 OrderDTO 用于消息传递
- 配置 RabbitMQ 消费者实现库存事件监听
- 实现基于 Redis 的幂等性检查
- 修改 reduceInventory 接口返回预扣结果
- 添加事务同步机制确保订单与库存一致性
- 更新应用配置以支持消息队列和函数式绑定
- 白名单路径常量统一管理

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -46,10 +46,10 @@ management:
   endpoint:
     health:
       show-details: always
-logging:
-  level:
-    root: ERROR
-    org.springframework: ERROR
-    org.hibernate: ERROR
-    org.springframework.web: ERROR
-    org.springframework.cloud: ERROR
+#logging:
+#  level:
+#    root: ERROR
+#    org.springframework: ERROR
+#    org.hibernate: ERROR
+#    org.springframework.web: ERROR
+#    org.springframework.cloud: ERROR
