feat(inventory): 集成Seata分布式事务并优化库存扣减逻辑
- 引入Seata依赖并排除Fence自动装配
- 移除基于消息队列的库存预留机制
- 新增直接扣减库存的reduceInventory方法
- 调整库存服务API接口适配新的扣减方式
- 更新配置文件支持Consul注册发现及Seata配置
- 添加bootstrap.yml实现配置中心集成
- 新增ConfigTestController用于验证配置加载
- 优化订单服务调用库存逻辑，使用全局事务管理
- 移除冗余的WebFlux和Jackson依赖声明
- 统一健康检查白名单路径配置

--- a/inventory-service/inventory-impl/src/main/resources/application-dev.yml
+++ b/inventory-service/inventory-impl/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   cloud:
     function:
-      # ✅ 定义函数名称，对应 Consumer Bean 的名称
+      # 定义函数名称，对应 Consumer Bean 的名称
       definition: orderInput
 
     stream:
@@ -10,7 +10,7 @@ spring:
         orderInput-in-0:
           destination: order.events
           content-type: application/json
-          # ✅ 消费者组（确保消息持久化和负载均衡）
+          #  消费者组（确保消息持久化和负载均衡）
           group: inventory-service
 
       rabbit:
@@ -22,10 +22,4 @@ spring:
               # ✅ 每次只拉取 1 条消息
               prefetch: 1
               # ✅ 消费失败后重试配置
-              max-attempts: 3
-              # ✅ 重试间隔（毫秒）
-              initial-interval: 1000
-              # ✅ 重试间隔倍数
-              multiplier: 2.0
-              # ✅ 最大重试间隔
-              max-interval: 10000
+              failed-declaration-retry-interval: 5000
