--- a/inventory-service/inventory-impl/src/main/resources/application.yml
+++ b/inventory-service/inventory-impl/src/main/resources/application.yml
@@ -34,11 +34,25 @@ management:
     health:
       show-details: always
 
-logging:
-  level:
-    root: ERROR
-    org.springframework: ERROR
-    org.hibernate: ERROR
-    org.springframework.web: ERROR
-    org.springframework.cloud: ERROR
-
+#logging:
+#  level:
+#    root: ERROR
+#    org.springframework: ERROR
+#    org.hibernate: ERROR
+#    org.springframework.web: ERROR
+#    org.springframework.cloud: ERROR
+seata:
+  registry:
+    type: consul
+    consul:
+      server-addr: localhost:8500
+      cluster: default
+  config:
+    type: consul
+    consul:
+      key: config/seata/data
+      server-addr: localhost:8500
+  tx-service-group: khr
+  service:
+    vgroup-mapping:
+      khr: default
