refactor(core): 重构分布式事务与上下文管理
- 移除 Alibaba Seata 依赖，替换为原生 Seata 2.0.0
- 简化 Seata 配置，统一使用本地注册与分组配置
- 禁用 bootstrap 配置中心加载
- 优化全局异常处理器，使用 localizedMessage 替代 message
- 改进 REST 客户端，自动传递 Seata 全局事务 ID
- 重构用户上下文管理，从 ScopedValue 迁移至 ThreadLocal
- 增强用户上下文过滤器，确保线程安全与资源清理
- 升级项目依赖版本，引入 ANTLR 4.13.1

--- a/inventory-service/inventory-impl/src/main/resources/bootstrap.yml
+++ b/inventory-service/inventory-impl/src/main/resources/bootstrap.yml
@@ -10,7 +10,7 @@ spring:
         format: yaml
         profile-separator: '-'
         # 是否启用配置中心,默认值 true 开启
-        enabled: true
+        enabled: false
         # 设置配置的基本文件夹,默认值config 可以理解为配置文件所在的最外层文件夹
         # 设置应用的文件夹名称,默认值application 一般建议设置为微服务应用名称
         default-context: application
