--- a/common/pom.xml
+++ b/common/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>io.seata</groupId>
             <artifactId>seata-all</artifactId>
-            <version>2.0.0</version>
+            <version>${seata.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
