--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -21,6 +21,11 @@
     </modules>
     <dependencies>
         <dependency>
+            <groupId>org.khr.microservice</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
